Fork from pypi2spec to npm2spec.

--- a/README
+++ b/README
@@ -1,9 +1,9 @@
-pip2spec
-========
+pypi2spec
+=========
 
 This project aims at providing an easy way to generate a spec file
-for projects hosted on pypi:
-http://pypi.python.org/pypi
+for projects hosted on npm:
+http://npmjs.org
 
 Dependencies:
 ------------
